<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="36dp">

    <TextView
        android:id="@+id/text1"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:paddingBottom="4dp"
        tools:text="Sinan Gunes" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:background="@color/color_divider" />
</RelativeLayout>