<resources>
    <string name="app_name">World Clock</string>

    <!--Component-->

    <string name="app_bar_menu_search">Search</string>

    <string name="bottom_nav_account_title">Account</string>
    <string name="bottom_nav_register_title">Create Account</string>
    <string name="bottom_nav_users_title">Manage Users</string>
    <string name="bottom_nav_login_title">Log in</string>
    <string name="bottom_nav_logout_title">Log out</string>


    <!--Theme Summary-->

    <string name="city">City</string>
    <string name="user">User</string>
    <string name="name">Name</string>
    <string name="time_zone">Time Zone (GMT)</string>
    <string name="time_zone_id">Time Zone ID</string>
    <string name="save">Save Record</string>
    <string name="delete">Delete</string>
    <string name="sure_to_delete">Are you sure to delete this record?</string>
    <string name="yes_delete">Yes, delete</string>
    <string name="cancel">Cancel</string>
    <string name="empty" />
    <string name="saved_clocks">Saved Clocks</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="have_account_register">Don\'t you have an account, let\'s have one?</string>
    <string name="have_account_login">Do you have an account? Just log in then.</string>
    <string name="profile">Profile</string>
    <string name="entries_label">Entries:</string>
    <string name="username_label">Username:</string>
    <string name="change_password">Change Password</string>
    <string name="user_role">User Role</string>
    <string name="clock_record">Clock Record</string>
    <string name="new_password">New Password</string>
    <string name="users">Users</string>
    <string name="messages_will_be_dropped">All clock records created by the user will also be discarded.</string>
    <string name="create_new_user">Create New User</string>
    <string name="create">Create</string>
    <string name="empty_message">Well, you haven\'t created a record yet.\n\nYou can use add button to fix that.</string>

    <string name="protocol_error">Cannot complete operation due to protocol error.</string>
    <string name="unknown_error">Unknown Error Happened.</string>
    <string name="connection_error">Network error, please check your connection.</string>
    <string name="unauthorized_access">Unauthorized Access!</string>
    <string name="cannot_process_request">Cannot Process Request!</string>
    <string name="duplicate_record">Record Already Exists</string>
</resources>
